# sane-figs

./: .gitignore  LICENSE  README.md  TESTING.md  mkdocs.yml  pyproject.toml  serve_docs.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: docs.yml  publish.yml  test.yml
docs_scripts/: __init__.py  generate_figures.py  mkdocs_plugin.py
docs_source/: colorways.md  index.md  interactive_demo.md  presets.md  watermarks.md
docs_source/libraries/: altair.md  matplotlib.md  plotly.md  seaborn.md
examples/: article_mode.py  basic_usage.py  colorways_demo.py  context_manager.py  interactive_demo.py  legend_positioning_demo.py  presentation_mode.py  size_comparison_demo.py  test_image_watermark.py  verify_branding.py  watermark_test_all_libraries.py  watermarks_demo.py  yaml_preset_usage.py
examples/presets/: custom_colorways.yaml  multi_presets.yaml  my_custom_preset.yaml
hooks/: __init__.py
sane_figs/: __init__.py
sane_figs/adapters/: __init__.py  altair.py  base.py  matplotlib.py  plotly.py  seaborn.py
sane_figs/core/: __init__.py  config_discovery.py  discovery.py  presets.py  registry.py  setup.py  validation.py  yaml_parser.py
sane_figs/styling/: __init__.py  colorways.py  layout.py  watermarks.py
sane_figs/utils/: __init__.py  version_utils.py
tests/: __init__.py  conftest.py  test_colorways.py  test_presets.py  test_watermarks.py
tests/visual/: __init__.py  conftest.py  test_matplotlib_visual.py
